--- a/BlogApp/BlogApp.UI/Areas/Admin/Views/Account/Login.cshtml
+++ b/BlogApp/BlogApp.UI/Areas/Admin/Views/Account/Login.cshtml
@@ -19,13 +19,11 @@
             <form asp-controller="Account" asp-action="Login" method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Email" class="control-label"></label>
-                    <input asp-for="Email" class="form-control" placeholder="Email" required />
+                    <input class="form-control" name="email" placeholder="Email" required />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Password" class="control-label"></label>
-                    <input asp-for="Password" class="form-control" placeholder="Password" required />
+                    <input class="form-control" name="password" placeholder="Password" required />
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
